[package]
name = "dioxus-v04-optional-hooks"
description = "Optional futures for Dioxus 0.4.0-0.4.3"
version = "0.2.4"
edition = "2021"
authors = ["Klimenty Titov <aclo.create@gmail.com>"]
license = "MIT"
repository = "https://github.com/markcda/dioxus-v04-optional-hooks"

[dependencies]
dioxus = "0.4"